put all files at base level and added files to include folder

--- a/boilerplate/agileSoftwareDevelopement.html
+++ b/boilerplate/agileSoftwareDevelopement.html
@@ -26,10 +26,10 @@
                   <!-- HERO UNIT -->
 		<div class="page-header">
 			<div class="container">
-				<h1 class="page-title pull-left">Contract Vehicles</h1>
+				<h1 class="page-title pull-left">Services - Agile Software Development</h1>
 				<ol class="breadcrumb">
-					<li><a href="Users/savroop%20singh/attainx/boilerplate/index.html">Home</a></li>
-					<li class="active">Contract Vehicles</li>
+					<li><a href="/Users/savroop%20singh/attainx/boilerplate/index.html">Home</a></li>
+					<li class="active">Services - Agile Software Development</li>
 				</ol>
 			</div>
 		</div>
@@ -40,7 +40,7 @@
 				<div class="row">
 					<div class="col-md-9">
 					    <div class="featured-image">
-					        <a href="#"><img src="img/adobe-stock/big-data-main-87909563.jpg" class="img-responsive" alt="featured-image" /></a>
+					        <a href="#"><img src="img/adobe-stock/agile-main-145438301.jpg" class="img-responsive" alt="featured-image" /></a>
 					    </div>
 						<p>Our Agile teamsproduce virtually flawless code quickly and cost-effectivelyby blending Extreme Programming (XP), Scrum, and Lean practices, and also provide greater ability to deliver a solution which matches what the client needs in a shorter amount of time
 						Agile methodologies have shown improved customer satisfaction as it delivers higher quality products in less time.</p><p>
@@ -78,10 +78,9 @@
 		</div>
 		<!-- LATEST CERTIFICAITON -->
 		<section id="certifications">
-			
 		</section>
 		<!-- END LATEST CERTIFICAITON -->
-		<div id="footer"></div>
+    <div id="footer"></div>
  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
  <script>
  	function initMap() {
