--- a/boilerplate/bigData.html
+++ b/boilerplate/bigData.html
@@ -26,10 +26,10 @@
                   <!-- HERO UNIT -->
 		<div class="page-header">
 			<div class="container">
-				<h1 class="page-title pull-left">Contract Vehicles</h1>
+				<h1 class="page-title pull-left">Services - Big Data</h1>
 				<ol class="breadcrumb">
-					<li><a href="Users/savroop%20singh/attainx/boilerplate/index.html">Home</a></li>
-					<li class="active">Contract Vehicles</li>
+					<li><a href="/Users/savroop%20singh/attainx/boilerplate/index.html">Home</a></li>
+					<li class="active">Big Data</li>
 				</ol>
 			</div>
 		</div>
@@ -42,10 +42,10 @@
 					    <div class="featured-image">
 					        <a href="#"><img src="img/adobe-stock/big-data-main-87909563.jpg" class="img-responsive" alt="featured-image" /></a>
 					    </div>
-						<p>Our Agile teamsproduce virtually flawless code quickly and cost-effectivelyby blending Extreme Programming (XP), Scrum, and Lean practices, and also provide greater ability to deliver a solution which matches what the client needs in a shorter amount of time
-						Agile methodologies have shown improved customer satisfaction as it delivers higher quality products in less time.</p><p>
-						Agile helps to overcome the problems occurred in waterfall methodologies.
-						Agile offers more flexibility, adaptability, cost effectiveness and ensures that requirements are molded around the customers’ needs and that changes are identified early and incorporated when they are least expensive.
+						<p>Big Data has become the latest means for obtaining insight into your customers and finding new ways to compete in the marketplace as comparing Big Data solutions to choose the best one is no trivial task, and once you commit, changing course becomes very difficult and expensive.</P><P>
+						AttainX Big Data consultants make data science serve the enterprises striving to harness complex data processing operations. Big data by its very definition means large data sets that it is very difficult to work with using normal database management tools and businesses are leveraging big data. Big Data technologies can process very large volumes of a variety of data sets, at high-velocity, to extract economic value.</P><P>
+						While volume indicates more data, it is the granular nature of the data that is unique. Big data requires processing high volumes of low-density, data of unknown value, such as Twitter data feeds, sensor-enabled equipment capturing data at the speed of light, and many more.</P><P>
+						We provide easy connect to your data with just a few clicks and easily create powerful dashboards and Easily scale from a single server to multiple datacenters.Main challenges are capture, sharing, analytics, storage, search, , visualizing and requires massively parallel software running on, hundreds or even thousands of servers.
 						</p>
 					</div>
 					<div class="col-md-3">
@@ -78,10 +78,9 @@
 		</div>
 		<!-- LATEST CERTIFICAITON -->
 		<section id="certifications">
-			
 		</section>
 		<!-- END LATEST CERTIFICAITON -->
-		<div id="footer"></div>
+    <div id="footer"></div>
  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
  <script>
  	function initMap() {
