--- a/boilerplate/erp.html
+++ b/boilerplate/erp.html
@@ -22,14 +22,14 @@
       <!--[if lt IE 8]>
           <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
       <![endif]-->
-      <div id="navBar"></div>
+       <div id="navBar"></div>
                   <!-- HERO UNIT -->
 		<div class="page-header">
 			<div class="container">
-				<h1 class="page-title pull-left">Contract Vehicles</h1>
+				<h1 class="page-title pull-left">ERP</h1>
 				<ol class="breadcrumb">
-					<li><a href="Users/savroop%20singh/attainx/boilerplate/index.html">Home</a></li>
-					<li class="active">Contract Vehicles</li>
+					<li><a href="/Users/savroop%20singh/attainx/boilerplate/index.html">Home</a></li>
+					<li class="active">ERP</li>
 				</ol>
 			</div>
 		</div>
@@ -40,12 +40,10 @@
 				<div class="row">
 					<div class="col-md-9">
 					    <div class="featured-image">
-					        <a href="#"><img src="img/adobe-stock/big-data-main-87909563.jpg" class="img-responsive" alt="featured-image" /></a>
+					        <a href="#"><img src="img/adobe-stock/erp-main-140345664.jpg" class="img-responsive" alt="featured-image" /></a>
 					    </div>
-						<p>Our Agile teamsproduce virtually flawless code quickly and cost-effectivelyby blending Extreme Programming (XP), Scrum, and Lean practices, and also provide greater ability to deliver a solution which matches what the client needs in a shorter amount of time
-						Agile methodologies have shown improved customer satisfaction as it delivers higher quality products in less time.</p><p>
-						Agile helps to overcome the problems occurred in waterfall methodologies.
-						Agile offers more flexibility, adaptability, cost effectiveness and ensures that requirements are molded around the customers’ needs and that changes are identified early and incorporated when they are least expensive.
+						<p>A successful Enterprise Resource Planning (ERP) project begins with finding the software with the right “fit” for your organization. ERP systems need regular upgrade to make them function properly with changing business needs. Many companies underestimate the significance of a thorough evaluation process and force fitting the wrong software can be very costly, time-consuming and risky. With our support services, businesses can avail of migration support, troubleshoot bugs and many other issues like security alerts, leveraging the worldwide community, etc. can be effectively fulfilled.</p>
+						<P>We concentrate on a set of guiding principles and with a common mission to provide customized solutions to our clients. When evaluating ERP, small-to-midsize organizations should look for ease of use and simplicity of implementation. It is also important to remember budgeting for ERP, despite any complex requirements you might have — often there is insufficient budget or human resources available to devote the required effort to maintaining IT infrastructure. Understanding the importance of rapid ERP deployments, compressed budgets, and squeezed time-lines, our ERP professionals provide the best ERP services, and offer reliable, low-cost and affordable ERP Maintenance & Support Services to our clients across the globe. We propose business process optimization and support implementation with high-performance, low-cost Enterprise Resource Planning software package.
 						</p>
 					</div>
 					<div class="col-md-3">
