--- a/boilerplate/mobility.html
+++ b/boilerplate/mobility.html
@@ -22,14 +22,14 @@
       <!--[if lt IE 8]>
           <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
       <![endif]-->
-      <div id="navBar"></div>
+       <div id="navBar"></div>
                   <!-- HERO UNIT -->
 		<div class="page-header">
 			<div class="container">
-				<h1 class="page-title pull-left">Contract Vehicles</h1>
+				<h1 class="page-title pull-left">Mobility</h1>
 				<ol class="breadcrumb">
-					<li><a href="Users/savroop%20singh/attainx/boilerplate/index.html">Home</a></li>
-					<li class="active">Contract Vehicles</li>
+					<li><a href="/Users/savroop%20singh/attainx/boilerplate/index.html">Home</a></li>
+					<li class="active">Mobility</li>
 				</ol>
 			</div>
 		</div>
@@ -40,12 +40,11 @@
 				<div class="row">
 					<div class="col-md-9">
 					    <div class="featured-image">
-					        <a href="#"><img src="img/adobe-stock/big-data-main-87909563.jpg" class="img-responsive" alt="featured-image" /></a>
+					        <a href="#"><img src="img/adobe-stock/mobility-main-118446167.jpg" class="img-responsive" alt="featured-image" /></a>
 					    </div>
-						<p>Our Agile teamsproduce virtually flawless code quickly and cost-effectivelyby blending Extreme Programming (XP), Scrum, and Lean practices, and also provide greater ability to deliver a solution which matches what the client needs in a shorter amount of time
-						Agile methodologies have shown improved customer satisfaction as it delivers higher quality products in less time.</p><p>
-						Agile helps to overcome the problems occurred in waterfall methodologies.
-						Agile offers more flexibility, adaptability, cost effectiveness and ensures that requirements are molded around the customers’ needs and that changes are identified early and incorporated when they are least expensive.
+						<p>AttainX develop new mobility applications or add a mobile-enabled interface to your current websites or software so we can be available to customers who communicate across various platforms. This service is efficiently rendered by our team of highly skilled professionals with the help of advanced technology and latest software applications.</p>
+						<p>You have to figure out how to innovate, design, and develop cost effective mobile applications as mobile applications are constantly changing and updates are core to maintain a competitive edge. AttainX has ability to maintain mobile applications over extended timeframes and also we are well established to enter into any stage of development in order to provide reliable, cross-functional, and steadfast mobility solutions at very affordable price to our valued customers.</p>
+						<p>AttainX has a longer view of utilizing services team that is familiar with and cross trained across client applications insuring that service is rendered as and when applicable.
 						</p>
 					</div>
 					<div class="col-md-3">
@@ -81,7 +80,7 @@
 			
 		</section>
 		<!-- END LATEST CERTIFICAITON -->
-		<div id="footer"></div>
+		 <div id="footer"></div>
  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
  <script>
  	function initMap() {
