--- a/boilerplate/programAndProjectManagement.html
+++ b/boilerplate/programAndProjectManagement.html
@@ -22,14 +22,14 @@
       <!--[if lt IE 8]>
           <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
       <![endif]-->
-      <div id="navBar"></div>
+    <div id="navBar"></div>
                   <!-- HERO UNIT -->
 		<div class="page-header">
 			<div class="container">
-				<h1 class="page-title pull-left">Contract Vehicles</h1>
+				<h1 class="page-title pull-left">Program and Project Management</h1>
 				<ol class="breadcrumb">
-					<li><a href="Users/savroop%20singh/attainx/boilerplate/index.html">Home</a></li>
-					<li class="active">Contract Vehicles</li>
+					<li><a href="/Users/savroop%20singh/attainx/boilerplate/index.html">Home</a></li>
+					<li class="active">Program and Project Management</li>
 				</ol>
 			</div>
 		</div>
@@ -40,12 +40,12 @@
 				<div class="row">
 					<div class="col-md-9">
 					    <div class="featured-image">
-					        <a href="#"><img src="img/adobe-stock/big-data-main-87909563.jpg" class="img-responsive" alt="featured-image" /></a>
+					        <a href="#"><img src="img/adobe-stock/management-main-101665287.jpg" class="img-responsive" alt="featured-image" /></a>
 					    </div>
-						<p>Our Agile teamsproduce virtually flawless code quickly and cost-effectivelyby blending Extreme Programming (XP), Scrum, and Lean practices, and also provide greater ability to deliver a solution which matches what the client needs in a shorter amount of time
-						Agile methodologies have shown improved customer satisfaction as it delivers higher quality products in less time.</p><p>
-						Agile helps to overcome the problems occurred in waterfall methodologies.
-						Agile offers more flexibility, adaptability, cost effectiveness and ensures that requirements are molded around the customers’ needs and that changes are identified early and incorporated when they are least expensive.
+						<p>We help our clients achieve success in their most complex, highly visible programs with customized, scalable solutions aligned to their missions and strategies by offering a well-established program and project management methodology that ensures successful solution delivery across the various project performance factors-human, process, and technology.</p>
+						<p>We bring experience, proven methodologies, and talented, committed professionals to bear on the most challenging situations. The methodology facilitates alignment of project objectives with customer requirements, risk mitigation, and quality assurance, and ensures that projects are delivered on-time and within budget. Competing successfully in a high-velocity, software-driven world places increasing demands on an organization’s ability to execute and deliver projects at a rapid pace.
+						</p>
+						<p>Enterprises are looking to enhance speed, agility while minimizing risks by obtaining better control of data center assets. AttainX accomplishes this with a consolidation system that leverages the latest cloud and virtualization technology.
 						</p>
 					</div>
 					<div class="col-md-3">
@@ -81,7 +81,7 @@
 			
 		</section>
 		<!-- END LATEST CERTIFICAITON -->
-		<div id="footer"></div>
+	 <div id="footer"></div>
  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
  <script>
  	function initMap() {
