--- a/boilerplate/securitySolutions.html
+++ b/boilerplate/securitySolutions.html
@@ -26,10 +26,10 @@
                   <!-- HERO UNIT -->
 		<div class="page-header">
 			<div class="container">
-				<h1 class="page-title pull-left">Contract Vehicles</h1>
+				<h1 class="page-title pull-left">Security Solutions</h1>
 				<ol class="breadcrumb">
-					<li><a href="Users/savroop%20singh/attainx/boilerplate/index.html">Home</a></li>
-					<li class="active">Contract Vehicles</li>
+					<li><a href="/Users/savroop%20singh/attainx/boilerplate/index.html">Home</a></li>
+					<li class="active">Security Solutions</li>
 				</ol>
 			</div>
 		</div>
@@ -40,12 +40,16 @@
 				<div class="row">
 					<div class="col-md-9">
 					    <div class="featured-image">
-					        <a href="#"><img src="img/adobe-stock/big-data-main-87909563.jpg" class="img-responsive" alt="featured-image" /></a>
+					        <a href="#"><img src="img/adobe-stock/security-main-94905049.jpg" class="img-responsive" alt="featured-image" /></a>
 					    </div>
-						<p>Our Agile teamsproduce virtually flawless code quickly and cost-effectivelyby blending Extreme Programming (XP), Scrum, and Lean practices, and also provide greater ability to deliver a solution which matches what the client needs in a shorter amount of time
-						Agile methodologies have shown improved customer satisfaction as it delivers higher quality products in less time.</p><p>
-						Agile helps to overcome the problems occurred in waterfall methodologies.
-						Agile offers more flexibility, adaptability, cost effectiveness and ensures that requirements are molded around the customers’ needs and that changes are identified early and incorporated when they are least expensive.
+						<h3>Risk and Compliance Management</h3>
+						<p>Organizations face new, stringent regulatory reporting, and disclosure requirements. Financial service providers are more proactive due to adherence pressures, and a burden to comply. However enterprises today suffer from the lack of an enterprise-wide risk view because of insulated risk programs. With the emergence of new age technologies and myriad complex policies, and increase in the cost of operations as governance structures appear to have reduced organizational efficiency.</p>
+						<h3>Data Protection</h3>
+						<p>Protect your applications and infrastructure with static and dynamic masking, added scrutiny through data leak prevention and robust encryption solutions.</p>
+						<h3>Application Security Assessment</h3>
+						<p>nformation technology and high-speed Internet are great enablers of small business success, but with the benefits comes the need to guard against growing cyber threats. As larger companies take steps to secure their systems, less secure small businesses are easier targets for cyber criminals. Minimize the threat of a security breach with our services—from code reviews and assessments through integrated governance, risk and compliance solutions.</p>
+						<h3>Threat Management</h3>
+						<p>AttainX’s rely on our managed security solutions for comprehensive event monitoring across networks, supported by AttainX’s threat intelligence services. We adopt a regulatory change management program are able to realize a range of benefits, including reduced risk.
 						</p>
 					</div>
 					<div class="col-md-3">
