--- a/boilerplate/certifications.html
+++ b/boilerplate/certifications.html
@@ -22,63 +22,7 @@
       <!--[if lt IE 8]>
           <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
       <![endif]-->
-      <nav class="navbar navbar-default" role="navigation">
-              <div class="container">
-                  <div class="navbar-header">
-                      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                          <span class="sr-only">Toggle navigation</span>
-                          <span class="icon-bar"></span>
-                          <span class="icon-bar"></span>
-                          <span class="icon-bar"></span>
-                      </button>
-                      <a class="navbar-brand" href="#"><img src="img/attainx-logo.jpg" alt="Attanix Logo"/></a>
-                  </div>
-                  <div class="collapse navbar-collapse">
-                      <ul class="nav navbar-nav  navbar-right">
-                          <li><a href="#">HOME</a></li>
-                          <li class="dropdown">
-                              <a href="#" class="dropdown-toggle" data-toggle="dropdown">ABOUT US<i class="fa fa-angle-down"></i></a>
-
-                              <ul class="dropdown-menu">
-                                  <li><a href="#">Our Goal</a></li>
-                                  <li><a href="#">Our Team</a></li>
-                                  <li><a href="#">Flexibility</a></li>
-                                  <li><a href="#">Advisory Board</a></li>
-                              </ul>
-                              <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Cert's & CONTRACT VEHICLES<i class="fa fa-angle-down"></i></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="#">Certifications</a></li>
-                                    <li><a href="#">Contract Vehicles</a></li>
-                                </ul>
-                              </li>
-                              <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">CAPABILITY<i class="fa fa-angle-down"></i></a>
-                               <ul class="dropdown-menu">
-                                    <li><a href="#">Staffing Solutions</a></li>
-                                    <li><a href="#">Program And Project Management</a>
-                                    </li>
-                                    <li><a href="#">Agile Software Development</a></li>
-                                    <li><a href="#">ERP</a>
-                                    </li>
-                                    <li><a href="#">Geospatial Solutions</a></li>
-                                    <li><a href="#">Enterprise Service Desk</a>
-                                    </li>
-                                    <li><a href="#">Testing And iv&v</a></li>
-                                    <li><a href="#">Data Center Consolidation</a>
-                                    </li>
-                                    <li><a href="#">Mobility</a></li>
-                                    <li><a href="#">Big Dta</a>
-                                    </li>
-                                    <li><a href="#">Security Solutions</a></li>
-                             </ul>
-                              </li>
-                              <li><a href="#" target="_blank">CLIENTS</a></li>
-                              <li><a href="#" target="_blank">CAREERS</a></li>
-                              <li><a href="contactUs/contactUs.html" target="_blank">CONTACT US</a></li>
-                          </li>
-                        </ul>
-                      </div>
-                    </div>
-                  </nav>
+      <div id="navBar"></div>
                   <!-- HERO UNIT -->
 		<div class="page-header">
 			<div class="container">
@@ -133,96 +77,10 @@
 			</div>
 		</div>
 		<!-- LATEST CERTIFICAITON -->
-		<section>
-			<div class="container">
-				<h2 class="section-heading certifications-heading">CERTIFICATIONS & CONTRACT VEHICLES</h2>
-				<div class="certifications">
-            <div>
-             <a href="#"><img src="img/contract-vehicle.jpg" class="img-responsive" alt=""></a>
-           </div>
-					  <div>
-							<a href="#"><img src="img/sba-logo.png" class="img-responsive" alt=""></a>
-						</div>
-						<div>
-							<a href="#"><img src="img/edwsob-logo.jpg" class="img-responsive" alt=""></a>
-						</div>
-						<div>
-							<a href="#"><img src="img/wosb.jpg" class="img-responsive" alt=""></a>
-						</div>
-						<div>
-							<a href="#"><img src="img/sdb-logo.jpg" class="img-responsive" alt=""></a>
-						</div>
-						<div>
-							<a href="#"><img src="img/swam-logo.jpg" class="img-responsive" alt=""></a>
-						</div>
-
-				</div>
-			</div>
+		<section id="certifications">
 		</section>
 		<!-- END LATEST CERTIFICAITON -->
-		<footer>
-			<div class="container">
-				<div class="row">
-					<div class="col-md-4">
-						<!-- COLUMN 1 -->
-						<h3 class="sr-only">ABOUT US</h3>
-						<p>Proactively aggregate B2B initiatives before extensive channels. Monotonectally extend interactive methods of empowerment through excellent applications. Rapidiously synergize visionary products with sticky technology.</p>
-						<br>
-						<address class="margin-bottom-30px">
-							<ul class="list-unstyled">
-								<li>725 Church Street, Suite 505
-									<br> Lynchburg, VA 24504</li>
-								<li>Phone: (202) 400 - 2259</li>
-								<li>Email: operations@attainx.com</li>
-							</ul>
-						</address>
-						<!-- END COLUMN 1 -->
-					</div>
-					<div class="col-md-4">
-						<!-- COLUMN 2 -->
-						<h3 class="footer-heading">USEFUL LINKS</h3>
-						<div class="row margin-bottom-30px">
-							<div class="col-xs-6">
-								<ul class="list-unstyled footer-nav">
-									<li><a href="#">Home</a></li>
-									<li><a href="#">About Us</a></li>
-									<li><a href="#">Clients</a></li>
-									<li><a href="#">Contact us</a></li>
-								</ul>
-							</div>
-							<div class="col-xs-6">
-								<ul class="list-unstyled footer-nav">
-									<li><a href="#">Services</a></li>
-									<li><a href="#">Software Development</a></li>
-									<li><a href="#">Big Data</a></li>
-									<li><a href="#">Mobile development</a></li>
-									<li><a href="#">SDLC</a></li>
-								</ul>
-							</div>
-						</div>
-						<!-- END COLUMN 2 -->
-					</div>
-					<div class="col-md-4">
-						<!-- COLUMN 3 -->
-						<div class="social-connect">
-							<h3 class="footer-heading">GET CONNECTED</h3>
-							<ul class="list-inline social-icons">
-								<li><a href="#" class="facebook-bg"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#" class="twitter-bg"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#" class="googleplus-bg"><i class="fa fa-google-plus"></i></a></li>
-								<li><a href="#" class="rss-bg"><i class="fa fa-rss"></i></a></li>
-							</ul>
-						</div>
-						<!-- END COLUMN 3 -->
-					</div>
-				</div>
-			</div>
-			<!-- COPYRIGHT -->
-			<div class="text-center copyright">
-				©2017 The Develovers. All Rights Reserved.
-			</div>
-			<!-- END COPYRIGHT -->
-		</footer>
+		<div id="footer"></div>
  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
  <script>
  	function initMap() {
