--- a/boilerplate/dataCenterConsolidation.html
+++ b/boilerplate/dataCenterConsolidation.html
@@ -26,10 +26,10 @@
                   <!-- HERO UNIT -->
 		<div class="page-header">
 			<div class="container">
-				<h1 class="page-title pull-left">Contract Vehicles</h1>
+				<h1 class="page-title pull-left">Data Center Consolidation</h1>
 				<ol class="breadcrumb">
-					<li><a href="Users/savroop%20singh/attainx/boilerplate/index.html">Home</a></li>
-					<li class="active">Contract Vehicles</li>
+					<li><a href="/Users/savroop%20singh/attainx/boilerplate/index.html">Home</a></li>
+					<li class="active">Data Center Consolidation</li>
 				</ol>
 			</div>
 		</div>
@@ -42,10 +42,8 @@
 					    <div class="featured-image">
 					        <a href="#"><img src="img/adobe-stock/big-data-main-87909563.jpg" class="img-responsive" alt="featured-image" /></a>
 					    </div>
-						<p>Our Agile teamsproduce virtually flawless code quickly and cost-effectivelyby blending Extreme Programming (XP), Scrum, and Lean practices, and also provide greater ability to deliver a solution which matches what the client needs in a shorter amount of time
-						Agile methodologies have shown improved customer satisfaction as it delivers higher quality products in less time.</p><p>
-						Agile helps to overcome the problems occurred in waterfall methodologies.
-						Agile offers more flexibility, adaptability, cost effectiveness and ensures that requirements are molded around the customers’ needs and that changes are identified early and incorporated when they are least expensive.
+						<p>AttainX has Data center consolidation is the process of reducing the volume of physical IT assets through highly efficient and scalable technologies. Organizations leverage data center consolidation to reduce operating costs.</p>
+						<p>Today's competitive business environment, with increased focus on enterprise IT, most CIOs are done with optimizing the platform and applications layers in their IT setup. Now, more and more enterprise CIOs are exploring avenues to optimize their IT Infrastructure investments and setup, given the incremental costs of underperforming / heterogeneous data center assets.
 						</p>
 					</div>
 					<div class="col-md-3">
