--- a/boilerplate/enterpriseServiceDesk.html
+++ b/boilerplate/enterpriseServiceDesk.html
@@ -26,10 +26,10 @@
                   <!-- HERO UNIT -->
 		<div class="page-header">
 			<div class="container">
-				<h1 class="page-title pull-left">Contract Vehicles</h1>
+				<h1 class="page-title pull-left">Enterprise Service Desk</h1>
 				<ol class="breadcrumb">
-					<li><a href="Users/savroop%20singh/attainx/boilerplate/index.html">Home</a></li>
-					<li class="active">Contract Vehicles</li>
+					<li><a href="/Users/savroop%20singh/attainx/boilerplate/index.html">Home</a></li>
+					<li class="active">Enterprise Service Desk</li>
 				</ol>
 			</div>
 		</div>
@@ -40,12 +40,12 @@
 				<div class="row">
 					<div class="col-md-9">
 					    <div class="featured-image">
-					        <a href="#"><img src="img/adobe-stock/big-data-main-87909563.jpg" class="img-responsive" alt="featured-image" /></a>
+					        <a href="#"><img src="img/adobe-stock/service-desk-main-94673457.jpg" class="img-responsive" alt="featured-image" /></a>
 					    </div>
-						<p>Our Agile teamsproduce virtually flawless code quickly and cost-effectivelyby blending Extreme Programming (XP), Scrum, and Lean practices, and also provide greater ability to deliver a solution which matches what the client needs in a shorter amount of time
-						Agile methodologies have shown improved customer satisfaction as it delivers higher quality products in less time.</p><p>
-						Agile helps to overcome the problems occurred in waterfall methodologies.
-						Agile offers more flexibility, adaptability, cost effectiveness and ensures that requirements are molded around the customers’ needs and that changes are identified early and incorporated when they are least expensive.
+						<p>AttainX provides flexible, responsive, and high-performing managed Enterprise Service Desk. We expand the scope of service desk management from a traditional reactive function providing incident management and support services, to a new, we provides end user support through forecasted updates.</p>
+						<p>Our enterprise serve desk support all aspects of IT requirements across your infrastructure and applications. We focus on doing the job of providing high-value support by our ability to rapidly solve issues at first contact and expertise in solving more complex concerns by uncovering the root causes and eliminating future problems.</p>
+						<p>Rapid digitization of end user workplace environment is paving the way for Enterprise Service Desk transformation. Fast-changing demands from today's 24/7 connected users with multiple devices, make it challenging for enterprise IT to remain responsive, quick, and personalized.
+						Our Enterprise Service Desk is the single point of contact for all end users across your enterprise. We ensure they have access to all Information Services needed to restore their service quickly. Our service desk reduces support costs and increases your productivity and satisfaction.
 						</p>
 					</div>
 					<div class="col-md-3">
