--- a/boilerplate/geospatialSolutions.html
+++ b/boilerplate/geospatialSolutions.html
@@ -22,14 +22,14 @@
       <!--[if lt IE 8]>
           <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
       <![endif]-->
-      <div id="navBar"></div>
+       <div id="navBar"></div>
                   <!-- HERO UNIT -->
 		<div class="page-header">
 			<div class="container">
-				<h1 class="page-title pull-left">Contract Vehicles</h1>
+				<h1 class="page-title pull-left">Geospatial Solutions</h1>
 				<ol class="breadcrumb">
-					<li><a href="Users/savroop%20singh/attainx/boilerplate/index.html">Home</a></li>
-					<li class="active">Contract Vehicles</li>
+					<li><a href="/Users/savroop%20singh/attainx/boilerplate/index.html">Home</a></li>
+					<li class="active">Geospatial Solutions</li>
 				</ol>
 			</div>
 		</div>
@@ -40,12 +40,10 @@
 				<div class="row">
 					<div class="col-md-9">
 					    <div class="featured-image">
-					        <a href="#"><img src="img/adobe-stock/big-data-main-87909563.jpg" class="img-responsive" alt="featured-image" /></a>
+					        <a href="#"><img src="img/adobe-stock/geo-main-144507142.jpg" class="img-responsive" alt="featured-image" /></a>
 					    </div>
-						<p>Our Agile teamsproduce virtually flawless code quickly and cost-effectivelyby blending Extreme Programming (XP), Scrum, and Lean practices, and also provide greater ability to deliver a solution which matches what the client needs in a shorter amount of time
-						Agile methodologies have shown improved customer satisfaction as it delivers higher quality products in less time.</p><p>
-						Agile helps to overcome the problems occurred in waterfall methodologies.
-						Agile offers more flexibility, adaptability, cost effectiveness and ensures that requirements are molded around the customers’ needs and that changes are identified early and incorporated when they are least expensive.
+						<p>By integrating sensors, field applications, real-time communications, field and back-office processing, modeling, and analytics, offers comprehensive geospatial solutions. From needs analysis to implementation to maintenance, our staff stands ready to support your organization in enhancing the functionality and quality of your geographic information systems and geospatial data.</p>
+						<p>AttainX Geospatial solutions facilitate a high quality, productive workflow and data exchange to drive efficiency, productivity, safety and value in organizations of all sizes. The result is accurate data that can be transformed into the intelligence you – and your clients – require to make informed decisions.
 						</p>
 					</div>
 					<div class="col-md-3">
