--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -23,51 +23,8 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <nav class="navbar navbar-default" role="navigation">
-               <div class="container">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <a class="navbar-brand" href="index.html"><img src="img/attainx-logo.jpg" alt="Attanix Logo"/></a>
-                    </div>
-                    <div class="collapse navbar-collapse">
-                        <ul class="nav navbar-nav  navbar-right">
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">OUR COMPANY<i class="fa fa-angle-down"></i></a>
-
-                                <ul class="dropdown-menu">
-                                    <li><a href="#">Overview</a></li>
-                                    <li><a href="#">News</a></li>
-                                    <li><a href="#">Advisors</a></li>
-                                </ul>
-                              </li>
-                              <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">CAPABILITIES<i class="fa fa-angle-down"></i></a>
-                               <ul class="dropdown-menu">
-                                    <li><a href="#">Agile Software Development</a></li>
-                                    <li><a href="#">DevOps</a></li>
-                                    <li><a href="#">Cloud & Cloud Migration Services</a></li>
-                                    <li><a href="#">Big Dta</a></li>
-                                    <li><a href="#">IOT</a></li>
-                                    <li><a href="#">Cyber Security</a></li>
-                                    <li><a href="#">Shared Services</a></li>
-                                    <li><a href="#">Managed Services</a></li>
-                                    <li><a href="#">IV&V and Testing Servives</a></li>
-                                  </ul>
-                              </li>
-                              <li><a href="#" target="_blank">CONTRACTS</a></li>
-                              <li><a href="contactUs/contactUs.html" target="_blank">CERTIFICATIONS</a></li>
-
-                                <li><a href="#" target="_blank">PARTNERS & CLIENTS</a></li>
-                                <li><a href="contactUs/contactUs.html" target="_blank">CONTACT US</a></li>
-
-                          </ul>
-                        </div>
-                      </div>
-                    </nav>
+        <div id="navBar"></div>
+        
                     <!-- HERO UNIT -->
                                         		<section class="hero-unit-slider slider-responsive no-margin">
                                          			<div class="slick-carousel">
@@ -155,32 +112,7 @@
 		</section>
 		<!-- END BOXED CONTENT -->
     <!-- LATEST CERTIFICAITON -->
-		<section>
-			<div class="container">
-				<h2 class="section-heading certifications-heading">CERTIFICATIONS & CONTRACT VEHICLES</h2>
-				<div class="certifications">
-            <div>
-             <a href="#"><img src="img/contract-vehicle.jpg" class="img-responsive" alt=""></a>
-           </div>
-					  <div>
-							<a href="#"><img src="img/sba-logo.png" class="img-responsive" alt=""></a>
-						</div>
-						<div>
-							<a href="#"><img src="img/edwsob-logo.jpg" class="img-responsive" alt=""></a>
-						</div>
-						<div>
-							<a href="#"><img src="img/wosb.jpg" class="img-responsive" alt=""></a>
-						</div>
-						<div>
-							<a href="#"><img src="img/sdb-logo.jpg" class="img-responsive" alt=""></a>
-						</div>
-						<div>
-							<a href="#"><img src="img/swam-logo.jpg" class="img-responsive" alt=""></a>
-						</div>
-
-				</div>
-			</div>
-		</section>
+		<section id="certifications"></section>
 		<!-- END LATEST CERTIFICAITON -->
     <!-- NUMBERS -->
 		<section class="full-width-section no-margin">
@@ -229,49 +161,7 @@
 		<!-- END TESTIMONIAL -->
 
 		<!-- OUR CLIENTS -->
-		<section>
-			<div class="container">
-				<h2 class="section-heading clients-heading">OUR CLIENTS AND PARTNERS (PRIME/SUB ROLE)</h2>
-				<ul class="clients">
-					<li>
-						<a href="#"><img src="img/caci-logo.png" alt="logo"></a>
-					</li>
-					<li>
-						<a href="#"><img src="img/cai-logo.png" alt="logo"></a>
-					</li>
-					<li>
-						<a href="#"><img src="img/dhs-logo.png" alt="logo"></a>
-					</li>
-					<li>
-						<a href="#"><img src="img/dlt-logo.png" alt="logo"></a>
-					</li>
-					<li>
-						<a href="#"><img src="img/personal-management-logo1.png" alt="logo"></a>
-					</li>
-					<li>
-						<a href="#"><img src="img/fema-logo.png" alt="logo"></a>
-					</li>
-					<li>
-						<a href="#"><img src="img/finra.png" alt="logo"></a>
-					</li>
-					<li>
-						<a href="#"><img src="img/hcl-logo.png" alt="logo"></a>
-					</li>
-					<li>
-						<a href="#"><img src="img/hp.png" alt="logo"></a>
-					</li>
-					<li>
-						<a href="#"><img src="img/plateau-logo.png" alt="logo"></a>
-					</li>
-					<li>
-						<a href="#"><img src="img/personal-management-logo.png" alt="logo"></a>
-					</li>
-					<li>
-						<a href="#"><img src="img/usda-logo.png" alt="logo"></a>
-					</li>
-				</ul>
-			</div>
-		</section>
+		<section id="ourClients"></section>
 		<!-- END OUR CLIENTS -->
 
 
