--- a/boilerplate/staffingSolutions.html
+++ b/boilerplate/staffingSolutions.html
@@ -26,10 +26,10 @@
                   <!-- HERO UNIT -->
 		<div class="page-header">
 			<div class="container">
-				<h1 class="page-title pull-left">Contract Vehicles</h1>
+				<h1 class="page-title pull-left">Staffing Solutions</h1>
 				<ol class="breadcrumb">
-					<li><a href="Users/savroop%20singh/attainx/boilerplate/index.html">Home</a></li>
-					<li class="active">Contract Vehicles</li>
+					<li><a href="/Users/savroop%20singh/attainx/boilerplate/index.html">Home</a></li>
+					<li class="active">Staffing Solutions</li>
 				</ol>
 			</div>
 		</div>
@@ -40,12 +40,11 @@
 				<div class="row">
 					<div class="col-md-9">
 					    <div class="featured-image">
-					        <a href="#"><img src="img/adobe-stock/big-data-main-87909563.jpg" class="img-responsive" alt="featured-image" /></a>
+					        <a href="#"><img src="img/adobe-stock/recruitment-main-82905173.jpg" class="img-responsive" alt="featured-image" /></a>
 					    </div>
-						<p>Our Agile teamsproduce virtually flawless code quickly and cost-effectivelyby blending Extreme Programming (XP), Scrum, and Lean practices, and also provide greater ability to deliver a solution which matches what the client needs in a shorter amount of time
-						Agile methodologies have shown improved customer satisfaction as it delivers higher quality products in less time.</p><p>
-						Agile helps to overcome the problems occurred in waterfall methodologies.
-						Agile offers more flexibility, adaptability, cost effectiveness and ensures that requirements are molded around the customers’ needs and that changes are identified early and incorporated when they are least expensive.
+						<p>AttainX has been highly regarded for our expertise and innovation in the staffing industry, as we provide well-qualified, properly-vetted technical and functional resources. Whether it is providing just a few resources or staffing entire project teams, AttainX’s IT staffing solutions help clients with the right talent, skills and competencies needed for them. We provide clients exceptional IT talent to meet their demanding technology initiatives at both local and national levels.
+                        </p>
+						<p>We exceed client expectations through highly effective processes for recruiting, screening, and talent engagement. Our Staffing Team is professional, compassionate and stringently follows hiring procedures and guidelines. Our staffing professionals keep current with the latest trends.
 						</p>
 					</div>
 					<div class="col-md-3">
