--- a/boilerplate/testing.html
+++ b/boilerplate/testing.html
@@ -26,10 +26,10 @@
                   <!-- HERO UNIT -->
 		<div class="page-header">
 			<div class="container">
-				<h1 class="page-title pull-left">Contract Vehicles</h1>
+				<h1 class="page-title pull-left">Services - Testing and IV&V</h1>
 				<ol class="breadcrumb">
-					<li><a href="Users/savroop%20singh/attainx/boilerplate/index.html">Home</a></li>
-					<li class="active">Contract Vehicles</li>
+					<li><a href="/Users/savroop%20singh/attainx/boilerplate/index.html">Home</a></li>
+					<li class="active">Services - Testing and IV&V</li>
 				</ol>
 			</div>
 		</div>
@@ -40,12 +40,12 @@
 				<div class="row">
 					<div class="col-md-9">
 					    <div class="featured-image">
-					        <a href="#"><img src="img/adobe-stock/big-data-main-87909563.jpg" class="img-responsive" alt="featured-image" /></a>
+					        <a href="#"><img src="img/adobe-stock/testing-main-113847230.jpg" class="img-responsive" alt="featured-image" /></a>
 					    </div>
-						<p>Our Agile teamsproduce virtually flawless code quickly and cost-effectivelyby blending Extreme Programming (XP), Scrum, and Lean practices, and also provide greater ability to deliver a solution which matches what the client needs in a shorter amount of time
-						Agile methodologies have shown improved customer satisfaction as it delivers higher quality products in less time.</p><p>
-						Agile helps to overcome the problems occurred in waterfall methodologies.
-						Agile offers more flexibility, adaptability, cost effectiveness and ensures that requirements are molded around the customers’ needs and that changes are identified early and incorporated when they are least expensive.
+						<p>AttainX empower our clients with early insight into process deficiencies and system defects so managers can make timely and informed decisions. Our IV&V focus is risk management that supports forward momentum. Development organizations are constrained by their own business considerations. They may attempt to reduce their costs or meet deadlines by cutting corners in ways that reduce the usability, reliability, or performance of the application they are designing for you.</p><p>
+						We provide knowledgeable and engaged advocate working on your behalf throughout the development process, independent of any business considerations or internal politics of development organizations and Verifying that each step in the development process is complete and on track. These include functional, technical, and programmatic assessments to cover all aspects of a program – because all are vital to be successful.  </p><p>
+						The overall goal of risk mitigation manifests itself into “full life-cycle” IV&V services that provide a comprehensive quality view at and during each phase of the program through up-front assessments of all major contract deliverables and program-executed processes. Validating that the final product satisfies functional and other requirements as documented in original design specifications.
+
 						</p>
 					</div>
 					<div class="col-md-3">
