added new rightcolumn file for map hours and address

--- a/boilerplate/advisoryBoard.html
+++ b/boilerplate/advisoryBoard.html
@@ -24,23 +24,25 @@
       <![endif]-->
       <div id="navBar"></div>
                   <!-- HERO UNIT -->
-		<div class="page-header has-intro">
+		<div class="page-header">
 			<div class="container">
-        <div class="left pull-left">
-					<h1 class="page-title">Our Advisor</h1>
-					<p class="page-header-intro">AttainX advisory board consists of former Federal and commercial C-Level executives. Our board meets every quarter and reviews the roadmap and strategies of AttainX. The advisory board provides guidence, and direction on future next steps for AttainX, offer thought leadership for products that AttainX is building on Big Data, Analytics, Mobility and Cloud.</p>
-				</div>
+					<h1 class="page-title pull-left">Our Advisor</h1>
 				<ol class="breadcrumb">
 					<li><a href="/Users/savroop%20singh/attainx/boilerplate/index.html">Home</a></li>
 					<li class="active">Advisor</li>
 				</ol>
 			</div>
 		</div>
+
 		<!-- END BREADCRUMBS -->
 		<!-- PAGE CONTENT -->
+		
 		<div class="page-content">
 			<div class="container advisoryBoard">
 				<div class="row">
+				    <div class="col-md-6">
+		    <p class="page-header-intro">AttainX advisory board consists of former Federal and commercial C-Level executives. Our board meets every quarter and reviews the roadmap and strategies of AttainX. The advisory board provides guidence, and direction on future next steps for AttainX, offer thought leadership for products that AttainX is building on Big Data, Analytics, Mobility and Cloud.</p>
+		</div>
 					<div class="col-md-9">
             <h2 class="section-heading">Natalia Olson-Urtecho</h2>
 						<p>Natalia Olson-Urtecho was the Regional Administrator for the U.S. Small Business Administration, served as a Presidential Appointee from 2012-21017, she was responsible for delivery and management of small business programs, financial assistance, and business development initiatives throughout the mid-Atlantic region. She served a population of nearly 30 million in 7 district offices though out Pennsylvania; Delaware; Maryland.; West Virginia; Virginia, and Washington, D.C.</p> <p>Olson-Urtecho oversaw more than 180 SBA offices; SCORE chapters; Business Development Centers and other resources while managing a field staff of more than 100 loan, business, community outreach specialists and support personnel. She worked with local lenders and successful firms across the region, overseeing more than $34.2 billion in federal government contracts for goods and services purchased from local entrepreneurs.</p>
