--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -24,7 +24,7 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div id="navBar"></div>
-        
+
                     <!-- HERO UNIT -->
                                         		<section class="hero-unit-slider slider-responsive no-margin">
                                          			<div class="slick-carousel">
@@ -65,8 +65,8 @@
 				<div class="row">
 					<div class="col-md-6">
 						<h2 class="section-heading">KNOW ATTANIX</h2>
-						<p class="lead">AttainX Inc., established on 2008, headquartered in Lynchburg, Virginia is a WOSB/EDWOSB SBA certified Hubzone, certified 8(a), and ISO 9001:2008 certified small business having Contract Vehicle GSA IT Schedule 70.</p>
-            <p>We specialize in Information Technology Solutions, our expertise is in Software Application Development, Cyber Security solutions, Big Data, Mobile Application development, Enterprise Service Desk solutions, IV&V, and ERP Implementation and Maintenance.</p>
+						<p class="lead">AttainX Inc., is a SBA Certified 8a, Hubzone, EDWOSB/WOSB small business. AttainX is also a Virginia SWAM Certified and ISO 9001:2008 certified company.</p>
+            <p>Attainx delivers information technology solutions to federal and state agencies. Our expertise is in software application development, testing, maintenance, cloud application offerings and migration to cloud technologies, enterprise architecture, cyber security, big data, enterprise service desk and IV&amp;V solutions, We also specialize in ERP Implementation, maintenance and digital transformation of existing business processes. Our goal is to provide our clients the highest ROI with leading edge and cost-effective solutions to support the goals and mission of our clients.</p>
 					</div>
 					<div class="col-md-6">
 						<img src="img/adobe-stock/home-main-119981328.png" class="img-responsive" alt="Image Intro">
@@ -83,28 +83,28 @@
 						<div class="boxed-content left-aligned left-boxed-icon">
 							<i class="fa fa-flag"></i>
 							<h2 class="boxed-content-title">OUR GOAL</h2>
-							<p>Our passion is to be an example of excellence. We exceed in our commitment to our clients in terms of Technology, People and Services our passion is to build a partnership with our Client to deliver the state of art Technology and help cut development, operational and maintenance costs. This goal enables us to be a provide world class service.</p>
+							<p>Our passion is to excel in our performance excellence. We exceed in our commitment to our clients in terms of technology, people and services our passion is to build a partnership with our Client to deliver the state of art technology and help cut development, operational and maintenance costs. This goal enables us to be a provide world class service.</p>
 						</div>
 					</div>
 					<div class="col-md-6">
 						<div class="boxed-content left-aligned left-boxed-icon">
 							<i class="fa fa-globe"></i>
 							<h2 class="boxed-content-title">OUR TEAM</h2>
-							<p>We have highly skilled and experienced team, our passion is to work with our client in their mission and deliver the best of skills that leads our client to flawless delivery and success. Our commitment to quality and delivery: Our team has the passion and determination to deliver quality and exceptional outcomes that help our client maintain quality standards and achieve, CMMI level standards.</p>
+							<p>We have highly skilled and experienced team with delivery experience in federal and state, our passion is to work with our client in their mission and deliver the best of skills that leads our client to flawless delivery and success at a lower cost. Our commitment to quality and delivery makes us different, our team has the passion and determination to deliver quality and exceptional outcomes that help our client maintain quality standards and achieve, ISO, CMMI and ITIL</p>
 						</div>
 					</div>
 					<div class="col-md-6">
 						<div class="boxed-content left-aligned left-boxed-icon">
 							<i class="fa fa-cog"></i>
 							<h2 class="boxed-content-title">FLEXIBLE</h2>
-							<p>Our clients’ needs are unique and different, we as a team have the ability to deal with new challenges and match our subject matter resources with the client’s business needs.</p>
+							<p>Our clients’ needs are unique and different, we as a team have the ability to deal with new challenges and match our subject matter resources with the client’s business needs. Our custom IT dashboard provides our clients real time access to their IT Budget/ IT spend, resource utilization and optimization, current status and upcoming milestones.</p>
 						</div>
 					</div>
 					<div class="col-md-6">
 						<div class="boxed-content left-aligned left-boxed-icon">
 							<i class="fa fa-users"></i>
 							<h2 class="boxed-content-title">ADVISORY BOARD</h2>
-							<p>AttainX advisory board consists of former Federal and commercial C-Level executives. Our board meets every quarter and reviews the roadmap and strategies of AttainX. The advisory board provides guidance, and direction on future next steps for AttainX, offer thought leadership for products that AttainX is building on Big Data, Analytics, Mobility and Cloud.</p>
+							<p>AttainX advisory board consists of former Federal and commercial C-Level executives. Our board meets every quarter and reviews the roadmap and strategies of AttainX. The advisory board provides guidance, and direction on future next steps for AttainX, offer thought leadership for innovative products and solutions that AttainX is building on Big Data, Analytics, Cyber Securty, Enterprise Architecture, Mobility and Cloud.</p>
 						</div>
 					</div>
 				</div>
